fix: align end

--- a/packages/ui-components/src/styles/markdown.css
+++ b/packages/ui-components/src/styles/markdown.css
@@ -184,15 +184,16 @@ main {
           block
           border-b
           py-2
-          pl-[50%]
+          pl-[33%]
           text-right
           text-neutral-600
           before:absolute
           before:left-0
           before:top-1/2
-          before:w-1/2
+          before:w-1/3
           before:-translate-y-1/2
           before:break-words
+          before:text-left
           before:font-medium
           before:text-neutral-700
           before:content-[attr(data-label)]
